# ros2-nav2-ttc-dynamic-avoidance

./: .gitignore  README.md
src/fishbot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
src/fishbot_description/urdf/fishbot/: fishbot.ros2_control.xacro
src/fishbot_description/urdf/fishbot/plugins/: gazebo_control_plugin.xacro
src/fishbot_description/world/: room.world
src/fishbot_navigation2/: CMakeLists.txt
src/fishbot_navigation2/config/: nav2_params.yaml
src/fishbot_navigation2/launch/: navigation2.launch.py
src/fishbot_navigation2/maps/: map.pgm  map.yaml  room_mask.pgm  room_mask.yaml
src/fishbot_navigation2/scripts/: dynamic_scan_filter.py  intersection_speed_gate.py  intersection_supervisor.py
src/moving_obstacle_plugin/: CMakeLists.txt  package.xml
src/moving_obstacle_plugin/src/: moving_obstacle_plugin.cpp
